syntax = "proto3";

option go_package = "github.com/tracey7d4/bsbLookup/proto";

package bsbLookup;

service bsbLookup {
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message ValidateRequest {
  string bsb = 1;
}

message ValidateResponse {
  bool valid = 1;
  string bank_code = 2;
}